sutings for face id

--- a/ios/newsapp/Info.plist
+++ b/ios/newsapp/Info.plist
@@ -74,6 +74,8 @@
     <key>UIUserInterfaceStyle</key>
     <string>Automatic</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
+    <key>NSFaceIDUsageDescription</key>
+    <string>Используется для авторизации по лицу</string>
     <false/>
   </dict>
 </plist>
